fix z-index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1032,7 +1032,7 @@ article blockquote p {
   width: 60px;
   right: 20px;
   top: 40%;
-  z-index: 20;
+  z-index: 10000;
 }
 .sideTool a {
   margin-top: 10px;
